# Sakiko

./: .env  README.md  bot.py  config.py  pyproject.toml  requirements.txt
BDS/: __init__.py  model.py  server.py
bds_plugin/: LLCommandIn.py  LLForward.py
data/: player.json
plugin/block/: __init__.py
plugin/cmd/: __init__.py
plugin/forward/: __init__.py
plugin/init/: __init__.py
plugin/whitelist/: __init__.py
plugins/block/: __init__.py
plugins/cmd/: __init__.py
plugins/forward/: __init__.py
plugins/help/: __init__.py
plugins/list/: __init__.py
plugins/whitelist/: __init__.py
utils/: __init__.py
